--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://사용자이름.github.io/저장소이름",
+  "homepage": "https://wuhyuk.github.io/react-blog",
   "type": "module",
   "scripts": {
     "dev": "vite",
